@@ -1,2 +1,3 @@
-For 0.90: Implement Mixing Sets
+For 0.95: Save/Restore volume
+For 1.00: Implement Mixing Sets
 
